@@ -1,6 +1,19 @@
-# XoXGameFX
-JavaFX XoX Game
 
-THIS GAME IS MADE BY ALP GULER and KEMAL OZKAN 
-LODZ UNIVERSITY OF TECHNOLOGY JAVA FUNDAMENTALS PROJECT
-6.06.2018
+---
+
+### ❌ `XoXGameFX`
+```markdown
+# JavaFX XoX (Tic Tac Toe)
+
+A simple Tic Tac Toe game using JavaFX for the GUI and basic logic in Java.
+
+## 🎨 Features
+- Clean UI with JavaFX
+- Win/draw detection
+- Two-player local mode
+
+## ▶️ Run
+Ensure you have JavaFX configured and run via your IDE or terminal.
+
+```bash
+java --module-path /path/to/javafx-sdk --add-modules javafx.controls -jar XoXGameFX.jar
